--- a/src/app/task-filter/task-filter.component.html
+++ b/src/app/task-filter/task-filter.component.html
@@ -1,1 +1,1 @@
-<input type="text" placeholder="Pesquisar">
+<input type="text" [(ngModel)]="filter" [(ngModelChanges)]=""" placeholder="Pesquisar">
