--- a/src/app/task-details/task-details.component.css
+++ b/src/app/task-details/task-details.component.css
@@ -14,6 +14,7 @@ textarea{
     background: var(--color-black-3);
     border-radius: 15px;
     resize: none;
+    margin: 5px 0;
     font-size: var(--font-size-4);
 }
 
@@ -33,7 +34,7 @@ textarea{
     background: var(--color-blue-2);
 }
 
-.cancel-button{
+.cancel-button {
     background: transparent;
     padding: 11px;
     border-radius: 5px;
