--- a/src/app/task-filter/task-filter.component.css
+++ b/src/app/task-filter/task-filter.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 7px;
+    height: 70px;
 }
 
 input{
@@ -11,10 +11,11 @@ input{
     outline: none;
     font-size: var(--font-size-4);
     padding: 10px 15px;
+    border-radius: 15px;
     background: var(--color-blue-3);
     max-width: 400px;
     width: 100%;
-    color: var(--color-black-3);
+    color: var(--color-black-1);
 }
 
 input::placeholder{
