--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,9 @@
     --font-size-3: 1.25rem;
     --font-size-4: 1rem;
     --font-size-5: .85rem;
-    --collor-blue-1: #33489d;
+
+
+    --color-blue-1: #33489D;
     --color-blue-2: #141e41;
     --color-blue-3: #283a81;
 
@@ -24,7 +26,7 @@
 }
 
 body{
-    background: linear-gradient(180deg, var(--color-blue-1)15%, var(--color-blue-2)100%);
+    background: linear-gradient(180deg, var(--color-blue-1)15%, var(--color-blue-2) 100%);
     min-height: 100vh;
 }
 
@@ -50,3 +52,4 @@ p, a{
     border-radius: 15px;
     padding: 25px 15px;
 }
+
